<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="new_item_label">To do</string>
    <string name="ok">OK</string>
    <string name="input_required">Please enter the text</string>
    <string name="app_name">TODO</string>
    <string name="travel">travel</string>
    <string name="dept_date">Dept Date</string>
    <string name="return_date">Return Date</string>
    <string name="dept_city">Dept City</string>
    <string name="dest_city">Departure City</string>
    <string name="GO">GO</string>
    <string name="airline">Airline</string>
    <string name="times">times</string>
    <string name="number_of_stops">%d stop(s)</string>
</resources>